--- a/DICOMcloud.Wado.WebApi/packages.config
+++ b/DICOMcloud.Wado.WebApi/packages.config
@@ -4,7 +4,7 @@
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
   <package id="fo-dicom.Desktop" version="4.0.3" targetFramework="net452" />
   <package id="log4net" version="2.0.10" targetFramework="net45" />
-  <package id="Microsoft.ApplicationInsights" version="2.8.1" targetFramework="net452" />
+  <package id="Microsoft.ApplicationInsights" version="2.8.1" targetFramework="net452" requireReinstallation="true" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.8.1" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.8.1" targetFramework="net452" />
@@ -31,11 +31,11 @@
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
   <package id="PubSub" version="1.5.0" targetFramework="net452" />
   <package id="StructureMap" version="4.5.2" targetFramework="net462" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.5.1" targetFramework="net452" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.5.1" targetFramework="net452" requireReinstallation="true" />
   <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net462" />
   <package id="System.Spatial" version="5.8.4" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net452" />
-  <package id="WebApi.StructureMap" version="1.0.21" targetFramework="net452" />
+  <package id="WebApi.StructureMap" version="1.0.21" targetFramework="net452" requireReinstallation="true" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
   <package id="WindowsAzure.Storage" version="9.3.2" targetFramework="net452" />
 </packages>
